establish connection to Mongo DB and create a model factory

--- a/views/factories.ejs
+++ b/views/factories.ejs
@@ -7,6 +7,9 @@
     <title>
         <%= title%>
     </title>
+
+    <link rel="stylesheet" href="/css/factory_style.css">
+
 </head>
 <body>
     <div class="container">
@@ -16,8 +19,8 @@
        </div>
        <div class="bottom">
         <div class="bottom-left">
-            <div></div>
-            <div></div>
+            <div> Total Sales: </div>
+            <div> Target Sales: </div>
         </div>
         <div class="code">
 
